Add route for getting aligned lyrics
